# Project-OOP

./: .gitignore  CMakeLists.txt
Project-OOP-main/Project-OOP-main/app/src/: main.cpp
Project-OOP-main/Project-OOP-main/core/src/: Persistence.cpp  SongLibrary.cpp
Project-OOP-main/Project-OOP-main/data/: songs.csv
app/: MainWindow.cpp
app/include/: AppController.hpp  MainWindow.hpp  PlayerBarWidget.hpp  PlaylistPanelWidget.hpp  RecommendationPanelWidget.hpp  SongRowWidget.hpp
app/src/: AppController.cpp  PlayerBarWidget.cpp  SongRowWidget.cpp  main.cpp
core/include/: Persistence.hpp  Playlist.hpp  Recommender.hpp  Song.hpp  SongLibrary.hpp  Userprofile.hpp
core/src/: Playlist.cpp  Recommender.cpp  Song.cpp  SongLibrary.cpp  Userprofile.cpp
data/: songs.csv
include/: Playlist.hpp
resources/: resources.qrc
src/: Playlist.cpp  main.cpp
